# embedded-lnd

./: .gitignore  LICENSE  addon.cc  base64.hpp  binding.gyp  index.js  liblnd.h  lnd_functions.cc  lnd_functions.h  lnd_server_streams.cc  lnd_server_streams.h  package-lock.json  run-as-program.js
.zed/: settings.json
nodejs-cpp-addon/: addon.cc  lnd_functions.cc  lnd_functions.h  lnd_server_streams.cc  lnd_server_streams.h  package.json  run-as-program.js
nodejs-cpp-addon-static/: addon.cc  binding.gyp  lnd_functions.cc  lnd_functions.h  run-as-program.js
rust/: Cargo.toml  Readme.md  build.rs  liblnd.h
rust/src/: bidi_stream.rs  event_subscription.rs  lib.rs  lnd_client.rs  lnd_types.rs  main.rs  tests.rs
