[package]
name = "lnd_rust_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "lnd_rust_wrapper"
path = "src/lib.rs"

[[bin]]
name = "lnd_rust_wrapper"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.60"

[dependencies]
prost = "0.13.2"
lnd_grpc_rust = { path = "../../lnd-grpc-rust" }
