[package]
name = "lnd_rust_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "lnd_rust_wrapper"
path = "src/lib.rs"

[[bin]]
name = "lnd_rust_wrapper"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.60"

[dependencies]
lnd_grpc_rust = "2.7.0"
libc = "0.2"
once_cell = "1.19.0"
lazy_static = "1.4.0"
