[package]
name = "embedded-lnd"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "embedded-lnd is a Rust library that provides a high-level, safe interface for interacting with an embedded LND node."
authors = ["Nitesh Balusu <niteshbalusu@icloud.com>"]
repository = "https://github.com/hsjoberg/embedded-lnd/tree/master/rust"

[lib]
name = "embedded_lnd"
path = "src/lib.rs"

[[bin]]
name = "embedded_lnd"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.60"

[dependencies]
lnd_grpc_rust = "2.8.0"
once_cell = "1.19.0"
lazy_static = "1.4.0"
anyhow = "1.0.89"
